--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CRUD</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&subset=latin-ext" rel="stylesheet">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <form
         class="datatable__row datatable__row--add"
         method="POST"
-        action="http://localhost:8080/v1/task/createTask"
+        action="https://secure-beach-88580.herokuapp.com/v1/task/createTask"
         data-task-add-form
     >
       <fieldset class="datatable__row-section datatable__row-section--input-section">
